[package]
name = "slint"
version = "0.1.0"
authors = ["mviyo <zaynerock8@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that devides up your income"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"


[package.metadata.bundle]
name = "Income Devider"
identifier = ""
